# Rofous

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Control-Dev.ipynb  Drone-Control.c  Flight_Sim.py  Makefile  Quadcopter copy.h  README.md  Rofous  cmake_install.cmake  image-labeller.py  image-viewer.py  python3_requirements.txt  setup.bash
.ipynb_checkpoints/: Control-Dev-checkpoint.ipynb
Computer_Vision/: image-labeller.py
Extras/: Flight_Sim.c  Flight_Sim.py  Gimbal.FCStd  matplotlibcpp.h
Python3_Notebooks/: Aerial_Device.ipynb  Control-Dev.ipynb  Motor_Dev.ipynb  Power_Dev.ipynb
Rofous_tools/: Aerial_Device.py
arduino/: Rofous_FW.ino
buffpy/: buff.bash  package.xml
configs/: AD_Tests.json  AD_Tests.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
documentation/: .$firmware_uml.drawio.bkp  firmware_uml.drawio
dysepy/: dyse.bash  package.xml
field-images/: field-poi-labels.txt
field-images-v0/: field-poi-labels.txt
field-images-v1/: field-poi-labels.txt
include/: AD_U_Test.hpp  Aerial_Device.hpp  U_Test.hpp
matlab/: .$quad_air_flow.drawio.bkp  Linearized_Lyapunov.m  Linearized_Lyapunov_dot.m  README_Humbert.md  README_Nicotra.md  Rufous_Dynamics.m  Rufous_Lyapunov.m  Rufous_Lyapunov_dot.m  Rufous_Thrust.m  Rufous_Torque.m  Rufous_frequency_analysis.mlx  Rufous_nl_controller.m  Rufous_og_controller.m  euler_angles_to_dcm.m  mitchells_hand_tuned.m  plot_vectors.m  quad_air_flow.drawio  quadcopter_analysis.mlx  rufous.mlx  tilde.m  (+5 more)
src/buff_rust/: Cargo.toml
src/buff_rust/src/: lib.rs
src/buff_rust/src/comms/: comms_node.rs  data_structures.rs  hid_interface.rs  hid_layer.rs  hid_reader.rs  hid_writer.rs  mod.rs  socks.rs  test.rs  viz_node.rs
src/buff_rust/src/hid_comms/: comms_node.rs  data_structures.rs  hid_interface.rs  hid_layer.rs  hid_old_layer.rs  hid_reader.rs  hid_ros.rs  hid_writer.rs  mod.rs  test.rs  viz_node.rs
src/buff_rust/src/sandbox/: lcm_tests.rs  mod.rs  sock_tests.rs  socks.rs
src/buff_rust/src/teensy_comms/: buff_hid.rs  comms_node.rs  data_structures.rs  hid_common.rs  hid_layer.rs  hid_old_layer.rs  hid_reader.rs  hid_ros.rs  hid_writer.rs  mod.rs  test.rs
src/buff_rust/src/utilities/: buffers.rs  data_structures.rs  loaders.rs  mod.rs  socks.rs  test.rs
(+339 files in other folders)
