[package]
name = "buff_rust"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
rand = "0.8.5"
hidapi = "2.2.0"
yaml-rust = "0.4.5"
glob = "0.3.1"



[[bin]]
name = "comms_node"
path = "src/hid_comms/comms_node.rs"
